<resources>
    <string name="app_name">SmartPayWallet</string>
    <string name="cannot_be_empty">Cannot Be Empty</string>
    <string name="pay_now">Pay Now</string>
    <string name="private_key">Private Key</string>
    <string name="sample_wallet_address">asdasjhfjdshfj465454</string>
    <string name="_5350">5350</string>
    <string name="generate_new_private_key">Generate New Private Key</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_address_reader">Wallet Address Reader</string>
    <string name="desc_nfc_tag">Please tap your phone on the shopper\'s phone</string>
    <string name="no_of_items_purchased">%d Items Purchased</string>
    <string name="total_amount">Total Amount = Rs. %f</string>
    <string name="itrm_price">MRP:  ₹ %f/-</string>
    <string name="serial_no">%d.</string>
    <string name="item_qty">Quantity: %d pc</string>
    <string name="item_amount">₹ %f/-</string>
    <string name="nfc_disabled">NFC is disabled.</string>
    <string name="buy_credits">Buy Credits</string>
    <string name="upload_csv">Upload CSV</string>
    <string name="accept_payment">Accept Payment</string>
    <string name="scan_bill">Scan Bill</string>
    <string name="generate_tax_report">Generate Tax Report</string>
    <string name="no_transactions_yet">No Transactions Yet</string>
    <string name="switch_to_qr_code_mode">Switch to QRCode Mode</string>
</resources>
