<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".payment.WalletActivity">

    <ImageView
        android:id="@+id/privateKeyImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_wallet"
        android:contentDescription="@string/private_key" />

    <TextView
        android:id="@+id/walletAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_wallet_address"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/balanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_5350"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="rechargeWallet"
        android:text="@string/buy_credits"/>

</LinearLayout>
